[gd_scene load_steps=3 format=2]

[ext_resource path="res://Script/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Script/Kwad/KwadConfig.gd" type="Script" id=2]

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="KwadConfig" type="Panel" parent="."]
pause_mode = 2
editor/display_folded = true
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -346.0
margin_top = 52.5
margin_right = -12.0
margin_bottom = 197.5
script = ExtResource( 2 )

[node name="CloseButton" type="Button" parent="KwadConfig"]
margin_left = 270.0
margin_top = 100.0
margin_right = 317.0
margin_bottom = 120.0
text = "Close"

[node name="CamAngle" type="HSlider" parent="KwadConfig"]
editor/display_folded = true
margin_left = 110.0
margin_top = 20.0
margin_right = 286.0
margin_bottom = 36.0
max_value = 90.0
value = 20.0
tick_count = 18
ticks_on_borders = true

[node name="Label" type="Label" parent="KwadConfig/CamAngle"]
margin_left = 186.0
margin_right = 233.0
margin_bottom = 14.0
text = "20°"

[node name="CamAngleLabel" type="Label" parent="KwadConfig/CamAngle"]
margin_left = -114.0
margin_right = -14.0
margin_bottom = 14.0
text = "Camera Angle:"
align = 2

[node name="Distortion" type="HSlider" parent="KwadConfig"]
editor/display_folded = true
margin_left = 110.0
margin_top = 44.0
margin_right = 286.0
margin_bottom = 60.0
value = 30.0
tick_count = 10
ticks_on_borders = true

[node name="Label" type="Label" parent="KwadConfig/Distortion"]
margin_left = -104.0
margin_right = -14.0
margin_bottom = 14.0
text = "Distortion: "
align = 2

[node name="DistortionLabel" type="Label" parent="KwadConfig/Distortion"]
margin_left = 186.0
margin_top = 1.0
margin_right = 232.0
margin_bottom = 15.0
text = "30"

[node name="FOV" type="HSlider" parent="KwadConfig"]
editor/display_folded = true
margin_left = 110.0
margin_top = 65.0
margin_right = 286.0
margin_bottom = 81.0
max_value = 179.0
value = 120.0
ticks_on_borders = true

[node name="Label" type="Label" parent="KwadConfig/FOV"]
margin_left = -104.0
margin_right = -14.0
margin_bottom = 14.0
text = "FOV:"
align = 2

[node name="FOVLabel" type="Label" parent="KwadConfig/FOV"]
margin_left = 186.0
margin_right = 226.0
margin_bottom = 14.0
text = "120°"

[node name="PauseMenu" type="Panel" parent="."]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -112.0
margin_right = 95.0
margin_bottom = 120.0

[node name="Title" type="Label" parent="PauseMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -23.0
margin_top = 8.0
margin_right = 23.0
margin_bottom = 22.0
text = "Paused"

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -44.5
margin_top = 32.0
margin_right = 44.5
margin_bottom = 202.0
custom_constants/separation = 5

[node name="ResumeButton" type="Button" parent="PauseMenu/VBoxContainer"]
margin_right = 89.0
margin_bottom = 20.0
text = "Resume"

[node name="Spacer" type="Control" parent="PauseMenu/VBoxContainer"]
margin_top = 25.0
margin_right = 89.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 20 )

[node name="KConfigButton" type="Button" parent="PauseMenu/VBoxContainer"]
margin_top = 50.0
margin_right = 89.0
margin_bottom = 70.0
text = "Kwad Config"

[node name="SettingsButton" type="Button" parent="PauseMenu/VBoxContainer"]
margin_top = 75.0
margin_right = 89.0
margin_bottom = 95.0
text = "Settings"

[node name="Spacer2" type="Control" parent="PauseMenu/VBoxContainer"]
margin_top = 100.0
margin_right = 89.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 10 )

[node name="MenuButton" type="Button" parent="PauseMenu/VBoxContainer"]
margin_top = 115.0
margin_right = 89.0
margin_bottom = 135.0
text = "Main Menu"

[node name="QuitButton" type="Button" parent="PauseMenu/VBoxContainer"]
margin_top = 140.0
margin_right = 89.0
margin_bottom = 160.0
text = "Quit"
[connection signal="pressed" from="KwadConfig/CloseButton" to="KwadConfig" method="_on_CloseButton_pressed"]
[connection signal="value_changed" from="KwadConfig/CamAngle" to="KwadConfig" method="_on_CamAngle_value_changed"]
[connection signal="value_changed" from="KwadConfig/Distortion" to="KwadConfig" method="_on_Distortion_value_changed"]
[connection signal="value_changed" from="KwadConfig/FOV" to="KwadConfig" method="_on_FOV_value_changed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/KConfigButton" to="." method="_on_KConfigButton_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
